Added scripts to dockerize App, add docker insturctions in README